fixing all the extra padding that is there for some weird reason

--- a/styles/core/layout/ie8.css
+++ b/styles/core/layout/ie8.css
@@ -230,7 +230,7 @@ header .top-bar .top-bar-section ul.primary-nav li a:hover{
 #utility #utility-bar #utility-links li{
 	list-style-type: none;
 	float: left;
-	margin-right: 15px;
+	/*margin-right: 15px;*/
 }
 #utility #utility-bar #utility-links li a{
 	color: #FFF;
@@ -259,7 +259,7 @@ body .page .main{
 
 #tier-one,
 #tier-two{
-	margin-bottom: 25px;
+	/*margin-bottom: 25px;*/
 }
 
 
@@ -340,7 +340,7 @@ dl.tabs dd a{
 
 #research-tools{
 	float: left;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 }
 #research-tools h2{
 	font-size: 14px;
@@ -380,5 +380,5 @@ dl.tabs dd a{
 	margin-bottom: 30px;
 }
 .happenings-content{
-	padding-left: 5px;
+	/*padding-left: 5px;*/
 }
